--- a/css/style.css
+++ b/css/style.css
@@ -27,3 +27,38 @@ body {
     background-color: #e7c272;
     color: #5cade5;
 }
+
+
+.center {
+    position: absolute;
+    transform: translate(-50%, -50%);
+    
+    
+}
+
+.material-icons {
+    color: white;
+    margin-top: -50px;
+    margin-right: 215px;
+    position: relative;
+    animation: animate 3s linear infinite;
+}
+@keyframes animate {
+    0%
+    {
+        box-shadow: 0 0 0 0 rgba(255,202,40,.7), 0 0 0 0 rgba(255,202,40,.7);
+    }
+     40%
+    {
+        box-shadow: 0 0 0 25px rgba(255,202,40,0), 0 0 0 0 rgba(255,202,40,.7);
+    }
+     80%
+    {
+        box-shadow: 0 0 0 25px rgba(255,202,40,0), 0 0 0 10px rgba(255,202,40,0);
+    }
+     100%
+    {
+        box-shadow: 0 0 0 0 rgba(255,202,40,0), 0 0 0 10px rgba(255,202,40,);
+    }
+}
+
