--- a/css/style.css
+++ b/css/style.css
@@ -14,19 +14,58 @@ body {
 
 
 .topnav a {
-    float: right;
+    float: left;
     color: #ffffff;
+    font-family: "Lucida Console";
     text-align: center;
-    padding: 14px 16px;
+    padding-left: 25px;
     text-decoration: none;
     font-size: 18px;
 }
 
 
-.topnav a:hover {
+/*.topnav a:hover {
     background-color: #e7c272;
     color: #5cade5;
+}*/
+
+
+
+.title h1 {
+    font-family: "Impact";
+    margin-top: 85px;
+    padding-top: 15px;
+    padding-bottom: 15px;
 }
+
+.intro #quotes {
+    font-family: "Times",Helvetica Neue;
+    font-size: 22px;
+    padding-left: 195px;
+    padding-right: 195px;
+    margin-top: 100px;
+    margin-bottom: 0px;
+    align-content: center;
+}
+
+.intro #sources {
+    font-family: "Helvetica Neue";
+    font-size: 15px;
+    padding-left: 425px;
+    margin-bottom: 50px;
+    color: #ffca28;
+}
+
+.navbutton {
+    margin-bottom: 225px;
+}
+
+.navbutton a {
+    margin-right: 5px;
+}
+
+
+
 
 
 .center {
@@ -62,3 +101,7 @@ body {
     }
 }
 
+
+#narrative {
+    padding-bottom: 150px;
+}
