--- a/css/materialize.css
+++ b/css/materialize.css
@@ -7116,7 +7116,7 @@ input[type=checkbox]:not(:disabled).tabbed:focus ~ .lever::before {
 /* Select Field
    ========================================================================== */
 select {
-  display: none;
+  /*display: none;*/
 }
 
 select.browser-default {
@@ -7125,7 +7125,7 @@ select.browser-default {
 
 select {
   background-color: rgba(255, 255, 255, 0.9);
-  width: 100%;
+  width: 10%;
   padding: 5px;
   border: 1px solid #f2f2f2;
   border-radius: 2px;
