--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,9 @@ body {
     position: absolute;
 }
 
-
+.wrapper {
+    width: 100%;
+}
 
 
 .topnav {
@@ -218,6 +220,7 @@ body {
     float: right;
 }
 
+/*
 .students img {
     position: relative;
     padding-right: 55px;
@@ -226,6 +229,7 @@ body {
     margin-bottom: -175px;
     margin-top: 150px;
 }
+*/
 
 .mask {
     width: 216px;
@@ -351,6 +355,50 @@ body {
     margin-left: 3.5px;
     padding-top: 25px;
     padding-bottom: 300px;
+    margin-bottom: 100px;
+    height: 373px;
+}
+
+
+
+
+.card {
+    width: 100%;
+    height: 375px;
+}
+
+/*.card-content {
+    vertical-align: middle;
+}*/
+
+#detail_1 {
+    font-size: 20px;
+    vertical-align: middle;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    line-height: 35px;
+    padding-top: 55px;
+}
+
+#detail_2 {
+    font-size: 20px;
+    vertical-align: middle;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    line-height: 35px;
+    padding-top: 75px;
+}
+
+#detail_3 {
+    font-size: 20px;
+    vertical-align: middle;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    line-height: 35px;
+    padding-top: 80px;
 }
 
 
@@ -372,9 +420,13 @@ body {
 
 
 
+
+
 .flip {
     transform-style: preserve-3d;
     transition: all 0.6s ease;
+    width: 100%;
+    height: 100%;
 }
 
 .flip:hover {
@@ -397,10 +449,7 @@ body {
     transform: rotateY(180deg);
 }
 
-.flow-text {
-    font-size: 20px;
-    padding: (10px,10px,10px,10px);
-}
+
 
 
 ul li {
